background dm video not playing

--- a/topics/dm/dm.html
+++ b/topics/dm/dm.html
@@ -24,7 +24,7 @@
 	<div id="page-wrapper">
 		<!-- Header -->
 		<section id="header" class="wrapper">
-			<video id="background-video" autoplay loop muted poster="dm_lss_image.jpg">
+			<video id="background-video" autoplay loop muted playsinline poster="dm_lss_image.jpg">
 				<source src="clipped_lss.mp4" type="video/mp4">
 			</video>
 			<!-- Logo -->
