--- a/topics/lss/lss.html
+++ b/topics/lss/lss.html
@@ -179,7 +179,7 @@
 								stages of this technique, which is where Tianlai comes in.
 								Tianlai's goal is to demonstrate the potential of this
 								technique to map the Universe, and prepare analytical pipelines and methodology
-								for future intensity mapping instruments.
+								for future intensity mapping instruments. <br><br>
 								
 								I began my research career working with <a class="link" href="https://cmb.physics.wisc.edu/">Peter Timbie</a>,
 								on the Tianlai array.
