adding new figures

--- a/papers/hi_cosmo/sup_analysis.html
+++ b/papers/hi_cosmo/sup_analysis.html
@@ -64,8 +64,29 @@
 						<h2>&sect4.3: RSD Errors at all redshifts</h2>
 					</article>
 					<!-- Redshift-space galaxy auto powers-->
+					<article class="thumb">
+						<a href="images/redshift_galaxy_auto.png" class="image">
+							<img src="images/redshift_galaxy_auto.png" title="
+							The redshift-space galaxy auto power spectra at various redshifts.
+							The shot noise floor that each of them reaches around k ~ 1 h/Mpc 
+							is apparent.
+							"/>
 
+						</a>
+						<h2>&sect4.3: Redshift-Space Galaxy Auto Power Spectra</h2>
+					</article>
 
+					<article class="thumb">
+						<a href="images/omegahi_kdep_model_compare_all_snaps_dark.png" class="image">
+							<img src="images/omegahi_kdep_model_compare_all_snaps_dark.png" title="
+							Similar to Figure 9, but including the error bars. Only the first k bin 
+							has significant uncertainties, with all other error bars being smaller than
+							the width of the point.
+							"/>
+
+						</a>
+						<h2>&sect4.3: &Omega; with Error Bars </h2>
+					</article>
 					<!-- 2D power spectra at different redshifts-->
 
 					<!-- Resolution dependence of correlation coefficient-->
