added arxiv link

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 									Lost in the FoG: Pitfalls of Models for Large-Scale Hydrogen Distributions
 								</p>
 								<p class="locations">
-									[<a href="LINK TO ARXIV">
+									[<a href="https://arxiv.org/abs/2503.01956">
 										arXiv
 									</a>] 
 									[<a href="LINK TO ads">
