added link to topic

--- a/topics/lss/lss.html
+++ b/topics/lss/lss.html
@@ -221,7 +221,7 @@
 								exist, having been used in previous galaxy surveys! Ideally, we should be able
 								to just adopt those same models for hydrogen, right? <br><br>
 
-								In Osinga+25, I tested these traditional models in a cosmological simulation (think
+								In <a href="https://arxiv.org/abs/2503.01956">Osinga+25</a>, I tested these traditional models in a cosmological simulation (think
 								Universe in a box) called IllustrisTNG to get an idea of how well they perform. In a simulation,
 								we know the "true" matter distribution <em>and</em> the hydrogen distribution.
 								We can apply our models to the hydrogen distribution and compare the inferred matter distribution
