--- a/topics/lss/lss.html
+++ b/topics/lss/lss.html
@@ -231,7 +231,9 @@
 								<span class="keyword">traditional models incur significant errors</span> when applied to hydrogen.
 								This has two major ramifications. First, recent observations that employed
 								these models inferred biased values of various cosmological parameters. Second, there is a severe
-								need to improve these models to prepare for upcoming 21cm intensity mapping observations.
+								need to improve these models to prepare for upcoming 21cm intensity mapping observations. In the
+								paper, I suggest some improvements that can mitigate some of these issues, but I plan on 
+								examining these in more detail in future work.
 								
 							</p>
 						</section>
