--- a/index.html
+++ b/index.html
@@ -258,6 +258,26 @@
 							</li>  -->
 							<li> 
 								<p class="authors">
+									Vladimir, Osinga, Diemer, Salazar, Rozo
+								</p> 
+								<p class="pubtitle">
+									Distinguishing Orbiting and Infalling Dark Matter Particles with Machine Learning
+								</p>
+								<p class="locations">
+									[<a href="https://arxiv.org/abs/2503.01956">
+										arXiv
+									</a>] 
+									<!-- [<a href="LINK TO ads">
+										ads
+									</a>]
+									[<a href="LINK TO JOURNAL">
+										JOURNAL NAME
+									</a>] -->
+									
+								 </p>
+							</li> 
+							<li> 
+								<p class="authors">
 									Osinga, Diemer, Villaescusa-Navarro
 								</p> 
 								<p class="pubtitle">
