--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<!-- Header -->
 				<section id="header" class="wrapper">
 			<!-- Background for Desktop: Video -->
-			<video id="background-video" loop muted playsinline poster="images/poster.png">
+			<video id="background-video" autoplay loop muted playsinline poster="images/poster.png">
 				<source src="images/cosmic_web_vis.mp4" type="video/mp4">
 			</video>
 
