--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css"/>
-
-<!-- Google tag (gtag.js) -->
+<!-- Preloading some assets-->
+ <link rel="preload" as="image" href="images/poster.png">
+ <link rel="preload" as="image" href="images/window.jpg">
+ <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y7HXLGT7Y9"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
