added tristen paper

--- a/index.html
+++ b/index.html
@@ -260,6 +260,26 @@
 							</li>  -->
 							<li> 
 								<p class="authors">
+									Shields, Salazar, Rozo, Adya, Osinga, Vladimir
+								</p> 
+								<p class="pubtitle">
+									The Density Profile of Dynamical Halos
+								</p>
+								<p class="locations">
+									[<a href="https://arxiv.org/pdf/2507.00410">
+										arXiv
+									</a>] 
+									[<a href="https://ui.adsabs.harvard.edu/abs/2025arXiv250700410S/abstract">
+										ads
+									</a>]
+									<!-- [<a href="LINK TO JOURNAL">
+										JOURNAL NAME
+									</a>] -->
+									
+								 </p>
+							</li> 
+							<li> 
+								<p class="authors">
 									Vladimir, Osinga, Diemer, Salazar, Rozo
 								</p> 
 								<p class="pubtitle">
@@ -269,10 +289,10 @@
 									[<a href="https://arxiv.org/abs/2503.01956">
 										arXiv
 									</a>] 
-									<!-- [<a href="LINK TO ads">
+									[<a href="https://ui.adsabs.harvard.edu/abs/2025arXiv250609146V/abstract">
 										ads
 									</a>]
-									[<a href="LINK TO JOURNAL">
+									<!-- [<a href="LINK TO JOURNAL">
 										JOURNAL NAME
 									</a>] -->
 									
