added pk data to sup analysis

--- a/papers/hi_cosmo/sup_analysis.html
+++ b/papers/hi_cosmo/sup_analysis.html
@@ -36,7 +36,7 @@
 						<h1><a href="sup_analysis.html"><strong>Lost in the FoG:</strong> supplementary analysis</a></h1>
 						<nav>
 							<ul>
-								<li><a href="#footer" class="icon solid fa-info-circle">About</a></li>
+								<li><a href="#footer" class="icon solid fa-info-circle">About & Data Products</a></li>
 							</ul>
 						</nav>
 					</header>
@@ -241,6 +241,17 @@
 										The descriptions will assume you have read
 										the paper, so they will not be necessarily
 										approachable without first reading the text.
+										<br><br>
+										<a href="pk_data.hdf5" download>Data</a><br>
+										Above is a hdf5 file that contains all the power
+										spectra used for this analysis.
+										They are stored in the following groups: 
+										{simname}/{redshift}/{auto/cross}/{field}/{real/redshift space}.
+										Many of the results can be recreated
+										from these power spectra, but please feel free to
+										contact me if you'd like a specific result not provided
+										in the hdf5 file.
+
 									</p>
 								</section>
 								<p class="copyright">
